--- a/action.yml
+++ b/action.yml
@@ -8,10 +8,9 @@
 # Reference: https://docs.github.com/en/actions/creating-actions/metadata-syntax-for-github-actions
 #
 ---
-name: K3S with Calico and Helm
+name: K3S with Helm
 description: |
   Install Kubernetes (K3S) and Helm 3.
-  Includes Calico network plugin for network policy support.
 
 branding:
   icon: server
@@ -61,9 +60,6 @@ outputs:
   k8s-version:
     description: "Installed k8s version, such as v1.29.0"
     value: "${{ steps.set-output.outputs.k8s-version }}"
-  calico-version:
-    description: "Installed calico version, such as v3.28.1"
-    value: "${{ steps.set-output.outputs.calico-version }}"
   helm-version:
     description: "Installed helm version, such as v3.13.0"
     value: "${{ steps.set-output.outputs.helm-version }}"
@@ -72,13 +68,6 @@ runs:
   using: "composite"
   steps:
     # https://rancher.com/docs/k3s/latest/en/installation/install-options/how-to-flags/
-    #
-    # NOTE: k3s has a Network Policy controller called kube-router, but it is
-    #       not robust enough for use, so we disable it and install our own:
-    #       calico. --flannel-backend=none should not be passed if we don't want
-    #       to install our own CNI.
-    #
-    #       ref: https://github.com/rancher/k3s/issues/947#issuecomment-627641541
     #
     - name: Validate input
       run: |
@@ -124,8 +113,6 @@ runs:
         curl -sfL https://get.k3s.io | INSTALL_K3S_VERSION="${{ inputs.k3s-version }}" INSTALL_K3S_CHANNEL="${{ inputs.k3s-channel }}" sh -s - \
           ${k3s_disable_metrics} \
           ${k3s_disable_traefik} \
-          --disable-network-policy \
-          --flannel-backend=none \
           ${k3s_docker} \
           ${{ inputs.extra-setup-args }} \
           ${default_extra_setup_args}
@@ -145,37 +132,6 @@ runs:
         echo "::endgroup::"
       shell: bash
 
-    # Install calico as a CNI to enforce our NetworkPolicies. Note that canal
-    # could do this job as well.
-    #
-    # ref: https://rancher.com/docs/k3s/latest/en/installation/network-options/
-    #
-    - name: Setup calico
-      run: |
-        echo "::group::Setup calico"
-        # Download calico.yaml k8s and split into separate manifests
-        curl -sfL --output /tmp/calico.yaml https://raw.githubusercontent.com/projectcalico/calico/v3.28.1/manifests/calico.yaml
-        mkdir calico
-        cd calico
-        yq -s '"\(.kind)-\(.metadata.name).yaml"' /tmp/calico.yaml
-
-        # Modify ConfigMap/calico-config: Look for `"type": "calico"` and add
-        # `"container_settings": ...` on the next line
-        sed -i.bak '/"type": "calico"/a\
-                  "container_settings": {"allow_ip_forwarding": true},'\
-          ConfigMap-calico-config.yaml
-
-        for f in *.yaml.bak; do
-          diff -u "$f" "${f%.bak}" || :
-        done
-
-        cat ./*.yaml | kubectl apply -f -
-        echo "::endgroup::"
-      shell: bash
-
-    # There will be some waiting for calico to make the k8s Nodes ready and for
-    # the k3s related pods to start and become ready, so there is time to
-    # install Helm at this point for example.
     - name: Setup Helm ${{ inputs.helm-version }}
       run: |
         echo "::group::Setup Helm ${{ inputs.helm-version }}"
@@ -190,21 +146,12 @@ runs:
         echo "kubeconfig=$HOME/.kube/config" >> $GITHUB_OUTPUT
         echo "k3s-version=$(k3s --version | grep --max-count=1 'k3s' | sed 's/.*\(v[0-9][^ ]*\).*/\1/')" >> $GITHUB_OUTPUT
         echo "k8s-version=$(k3s --version | grep --max-count=1 'k3s' | sed 's/.*\(v[0-9][^+]*\).*/\1/')" >> $GITHUB_OUTPUT
-        echo "calico-version=$(cat /tmp/calico.yaml | grep --max-count=1 'calico/cni:v' | sed 's/.*calico\/cni:\(.*\)/\1/')" >> $GITHUB_OUTPUT
         echo "helm-version=$(helm version --short | sed 's/\([^+]*\).*/\1/')" >> $GITHUB_OUTPUT
         echo "::endgroup::"
       shell: bash
 
-    - name: Wait for calico, coredns, metrics server, traefik
+    - name: Wait for coredns, metrics server, traefik
       run: |
-        echo "::group::Wait for daemonset/calico-node"
-        kubectl rollout status --watch --timeout=5m daemonset/calico-node -n kube-system
-        echo "::endgroup::"
-
-        echo "::group::Wait for deployment/calico-kube-controllers"
-        kubectl rollout status --watch --timeout=5m deployment/calico-kube-controllers -n kube-system
-        echo "::endgroup::"
-
         echo "::group::Wait for deployment/coredns"
         kubectl rollout status --watch --timeout=5m deployment/coredns -n kube-system
         echo "::endgroup::"
